tests/semantic/fact_variable/fact_variable.err
Error: Argument in fact is not constant in file fact_variable.dl at line 7
F(BB,"AA").
--^---------
1 errors generated, evaluation aborted
